tests/output/self_hosted/missing_return_value_error.txt
tests/missing_return_value_error.oomph:2: error: return value needed, because '->' was used at the start of function definition

    return
    ^^^^^^

